@@ -201,34 +201,10 @@ snp6.loadAffySeqCsv <- function(db, csvFile, cdfFile, batch_size=5000) {
         pmdf[["fid"]] <- xy2i(pmdf[["x"]], pmdf[["y"]])
         N <- nrow(pmdf)
 
-        ## process MMs
-##         mmSql <- paste("select mm_fid, pm_fid from pm_mm where pm_fid in (",
-##                        paste(pmdf[["fid"]], collapse=","), ")")
-##         pairedIds <- dbGetQuery(db, mmSql)
-##         foundIdIdx <- match(pmdf[["fid"]], pairedIds[["pm_fid"]], 0)
-##         mmdf <- pmdf[foundIdIdx, ]
-##         mmdf[["fid"]] <-  pairedIds[["mm_fid"]]
-## 
-##         ## Assuming 25mers
-##         midbase <- substr(mmdf$seq, 13, 13)
-##         types <- apply(table(mmdf$fset.name, mmdf$tallele)>0, 1,
-##                        function(v) paste(c("A", "C", "G", "T")[v], collapse=""))
-##         types <- rep(types, as.integer(table(mmdf$fset.name)))
-##         isSpecial <- (types == "AT" | types == "AG") & mmdf$offset == 0
-##         rm(types)
-##         midbase[isSpecial] <- complementBase(midbase[isSpecial], T)
-##         midbase[!isSpecial] <- complementBase(midbase[!isSpecial])
-##         rm(isSpecial)
-##         mmdf$seq <- paste(substr(mmdf$seq, 1, 12), midbase,
-##                           substr(mmdf$seq, 14, 25), sep="")
-##         rm(midbase)
-##         ## end MM seq
-
         values <- "(:fid, :offset, :tstrand, :tallele, :seq)"
         sql <- paste("insert into sequence values", values)
         dbBeginTransaction(db)
         dbGetPreparedQuery(db, sql, bind.data=pmdf)
-##        dbGetPreparedQuery(db, sql, bind.data=mmdf)
         dbCommit(db)
     }
 
@@ -275,8 +251,51 @@ snp6.buildPdInfoDb <- function(cdfFile, csvFile, csvSeqFile, csvFileCnv,
   closeDb(db)
 }
 
-# hacked by VC -- original code up above in loadAffyCsvNOCYTOBAND
-#
+getFragLength.na29.old <- function(v){
+  tmp <- strsplit(v, " /// ")
+  t(sapply(tmp,
+           function(y){
+             at.snp <- strsplit(y, " // ")
+             n <- length(at.snp)
+             enzymes <- toupper(sapply(at.snp, "[[", 1))
+             if(all(c(n==2, enzymes == "---")))
+               stop("2 enzymes missing IDs")
+             out <- rep(NA, 2)
+             i <- grep("NSP", enzymes)
+             if (length(i) > 0) out[1] <- as.integer(at.snp[[i]][3])
+             i <- grep("STY", enzymes)
+             if (length(i) > 0) out[2] <- as.integer(at.snp[[i]][3])
+             i <- grep("---", enzymes)
+             if (length(i) > 0) out[1] <- as.integer(at.snp[[i]][3])
+             out
+           }))
+}
+
+getFragLength.na29 <- function(v){
+  tmp <- strsplit(v, " /// ")
+  lens <- sapply(tmp, length)
+  if (max(lens) > 2) warning("For, at least, one SNP there is more than 1 record by enzyme.")
+  t(sapply(tmp,
+           function(y){
+             at.snp <- strsplit(y, " // ")
+             n <- length(at.snp)
+             enzymes <- toupper(sapply(at.snp, "[[", 1))
+             if(all(c(n==2, enzymes == "---")))
+               stop("2 enzymes missing IDs")
+             out <- rep(NA, 2)
+             i <- grep("NSP", enzymes)
+             if (length(i) > 0) out[1] <- mean(as.integer(sapply(at.snp[i], "[", 3)))
+             i <- grep("STY", enzymes)
+             if (length(i) > 0) out[2] <- mean(as.integer(sapply(at.snp[i], "[", 3)))
+
+###              i <- grep("---", enzymes)
+###              if (length(i) > 0) out[1] <- as.integer(mean(as.integer(sapply(at.snp[i], "[", 3))))
+
+             out
+           }))
+}
+
+
 snp6.loadAffyCsv <- function(db, csvFile, batch_size=5000) {
   con <- file(csvFile, open="r")
   on.exit(close(con))
@@ -289,57 +308,87 @@ snp6.loadAffyCsv <- function(db, csvFile, batch_size=5000) {
     
 ##    wantedCols <- c(1,2,3,4,7,8,10,12,13,14,17) # added 10/14
 
-  wantedCols <- c(1, 2, 3, 4, 5, 6, 8, 10, 11, 12, 15, 20, 21)
+  ## NA24
+  ## 01 - (*) - Probe Set ID
+  ## 02 - (*) - Affy SNP ID
+  ## 03 - (*) - dbSNP RS ID
+  ## 04 - (*) - Chromosome
+  ## 05 - (*) - Physical Position
+  ## 06 - (*) - Strand
+  ## 07 - ( ) - ChrX pseudo-autosomal region 1
+  ## 08 - (*) - Cytoband
+  ## 09 - ( ) - Flank
+  ## 10 - (*) - Allele A
+  ## 11 - (*) - Allele B
+  ## 12 - (*) - Associated Gene
+  ## 13 - ( ) - Genetic Map
+  ## 14 - ( ) - Microsatellite
+  ## 15 - (*) - Fragment Enzyme Length Start Stop
+  ## 16 - ( ) - Allele Frequencies
+  ## 17 - ( ) - Heterozygous Allele Frequencies
+  ## 18 - ( ) - Number of individuals/Number of chromosomes
+  ## 19 - ( ) - In Hapmap
+  ## 20 - (*) - Strand Versus dbSNP
+  ## 21 - (*) - Copy Number Variation
+  ## 22 - ( ) - Probe Count
+  ## 23 - ( ) - ChrX pseudo-autosomal region 2
+  ## 24 - ( ) - In Final List
+  ## 25 - ( ) - Minor Allele
+  ## 26 - ( ) - Minor Allele Frequency
+  ## wantedCols <- c(1, 2, 3, 4, 5, 6, 8, 10, 11, 12, 15, 20, 21)
+
+  ## NA29
+  ## 01 - (*) - Probe Set ID
+  ## 02 - (*) - dbSNP RS ID
+  ## 03 - (*) - Chromosome
+  ## 04 - (*) - Physical Position
+  ## 05 - (*) - Strand
+  ## 06 - ( ) - ChrX pseudo-autosomal region 1
+  ## 07 - (*) - Cytoband
+  ## 08 - ( ) - Flank
+  ## 09 - (*) - Allele A
+  ## 10 - (*) - Allele B
+  ## 11 - (*) - Associated Gene
+  ## 12 - ( ) - Genetic Map
+  ## 13 - ( ) - Microsatellite
+  ## 14 - (*) - Fragment Enzyme Type Length Start Stop
+  ## 15 - ( ) - Allele Frequencies
+  ## 16 - ( ) - Heterozygous Allele Frequencies
+  ## 17 - ( ) - Number of individuals/Number of chromosomes
+  ## 18 - ( ) - In Hapmap
+  ## 19 - (*) - Strand Versus dbSNP
+  ## 20 - (*) - Copy Number Variation
+  ## 21 - ( ) - Probe Count
+  ## 22 - ( ) - ChrX pseudo-autosomal region 2
+  ## 23 - ( ) - In Final List
+  ## 24 - ( ) - Minor Allele
+  ## 25 - ( ) - Minor Allele Frequency
+  ## 26 - ( ) - % GC
+  ## 27 - ( ) - OMIM
+  wantedCols <- c(1:5, 7, 9:11, 14, 19:20)
+  
   df <- read.table(con, sep=",", stringsAsFactors=FALSE, nrows=10,
                    na.strings="---", header=TRUE)[, wantedCols]
   header <- gsub(".", "_", names(df), fixed=TRUE)
   names(df) <- header
-  df[["Affy_SNP_ID"]] <- as.integer(df[["Affy_SNP_ID"]])
   df[["Strand_Versus_dbSNP"]] <- as.integer(df[["Strand_Versus_dbSNP"]] == "same")
   df[["Copy_Number_Variation"]] <- as.character(df[["Copy_Number_Variation"]])
   df[["Associated_Gene"]] <- as.character(df[["Associated_Gene"]])
   
-  FRAG_COL <- "Fragment_Enzyme_Length_Start_Stop"
-  
-##   tmp.length <- t(sapply(strsplit(df[, FRAG_COL], "///"),
-##   function(y) sapply(y, function(z)
-##   suppressWarnings(as.integer(strsplit(z, "//")[[1]][1])))))
-##   colnames(tmp.length) <- NULL
-
-  getFragLength.na24 <- function(v){
-    tmp <- strsplit(v, " /// ")
-    t(sapply(tmp,
-             function(y){
-               at.snp <- strsplit(y, " // ")
-               n <- length(at.snp)
-               enzymes <- toupper(sapply(at.snp, "[[", 1))
-               if(all(c(n==2, enzymes == "---")))
-                 stop("2 enzymes missing IDs")
-               out <- rep(NA, 2)
-               i <- grep("NSP", enzymes)
-               if (length(i) > 0) out[1] <- as.integer(at.snp[[i]][2])
-               i <- grep("STY", enzymes)
-               if (length(i) > 0) out[2] <- as.integer(at.snp[[i]][2])
-               i <- grep("---", enzymes)
-               if (length(i) > 0) out[1] <- as.integer(at.snp[[i]][2])
-               out
-             }))
-  }
-  tmp.length <- getFragLength.na24(df[[FRAG_COL]])
+  FRAG_COL <- "Fragment_Enzyme_Type_Length_Start_Stop"
+  df[[FRAG_COL]] <- as.character(df[[FRAG_COL]])
+  tmp.length <- getFragLength.na29(df[[FRAG_COL]])
   
   df[["Strand"]] <- as.integer(ifelse(df[["Strand"]] == "+", SENSE, ANTISENSE))
   df[["frag1"]] <- tmp.length[,1]
   df[["frag2"]] <- tmp.length[,2]
   df[[FRAG_COL]] <- NULL
 
-  ##  df[ , FRAG_COL] <- getFragLength(df[ , FRAG_COL])
-  
-  db_cols <- c("affy_snp_id", "dbsnp_rs_id", "chrom", "physical_pos",
-               "strand", "cytoband", "allele_a", "allele_b",
-               "gene_assoc", "dbsnp", "cnv", "fragment_length",
-               "fragment_length2")
+  db_cols <- c("dbsnp_rs_id", "chrom", "physical_pos", "strand",
+               "cytoband", "allele_a", "allele_b", "gene_assoc",
+               "dbsnp", "cnv", "fragment_length", "fragment_length2")
 
-  val_holders <- c(":Affy_SNP_ID", ":dbSNP_RS_ID", ":Chromosome",
+  val_holders <- c(":dbSNP_RS_ID", ":Chromosome",
                    ":Physical_Position", ":Strand", ":Cytoband",
                    ":Allele_A", ":Allele_B", ":Associated_Gene",
                    ":Strand_Versus_dbSNP", ":Copy_Number_Variation",
@@ -365,24 +414,16 @@ snp6.loadAffyCsv <- function(db, csvFile, batch_size=5000) {
         break
     }
     names(df) <- header
-    df[["Affy_SNP_ID"]] <- as.integer(df[["Affy_SNP_ID"]])
     df[["Strand_Versus_dbSNP"]] <- as.integer(df[["Strand_Versus_dbSNP"]] == "same")
     df[["Copy_Number_Variation"]] <- as.character(df[["Copy_Number_Variation"]])
     df[["Associated_Gene"]] <- as.character(df[["Associated_Gene"]])
-
-##     tmp.length <- t(sapply(strsplit(df[, FRAG_COL], "///"),
-##     function(y) sapply(y, function(z)
-##     suppressWarnings(as.integer(strsplit(z, "//")[[1]][1])))))
-## 
-##     colnames(tmp.length) <- NULL
     
-    tmp.length <- getFragLength.na24(df[[FRAG_COL]])
+    df[[FRAG_COL]] <- as.character(df[[FRAG_COL]])
+    tmp.length <- getFragLength.na29(df[[FRAG_COL]])
     df[["Strand"]] <- as.integer(ifelse(df[["Strand"]] == "+", SENSE, ANTISENSE))
     df[["frag1"]] <- tmp.length[,1]
     df[["frag2"]] <- tmp.length[,2]
-    df[[FRAG_COL]] <- NULL
     
-##    df[ , FRAG_COL] <- getFragLength(df[ , FRAG_COL])
     dbBeginTransaction(db)
     dbGetPreparedQuery(db, sql, bind.data=df)
     dbCommit(db)
@@ -391,16 +432,10 @@ snp6.loadAffyCsv <- function(db, csvFile, batch_size=5000) {
 }
 
 snp6.loadAffyCsv.cnv <- function(db, csvFile, batch_size=5000) {
-  getFragLength <- function(v){
-    tmp <- sapply(strsplit(v, " // "), function(obj) obj[[1]])
-    tmp[tmp == "---"] <- NA
-    as.integer(tmp)
-  }
-
   getPAR <- function(theDF){
     ## PAR: Pseudo-Autosomal Region
     ##   0: No / 1: PAR1 / 2: PAR2
-    PAR <- rep(0, nrow(theDF))
+    PAR <- rep(as.integer(0), nrow(theDF))
     PAR[theDF[["ChrX_pseudo_autosomal_region_1"]] == 1] <- 1
     PAR[theDF[["ChrX_pseudo_autosomal_region_2"]] == 2] <- 2
     theDF[["XPAR"]] <- as.integer(PAR)
@@ -421,31 +456,26 @@ snp6.loadAffyCsv.cnv <- function(db, csvFile, batch_size=5000) {
 
   df[["Associated_Gene"]] <- as.character(df[["Associated_Gene"]])
   
-  FRAG_COL <- "Fragment_Length_Start_Stop"
+  FRAG_COL <- "Fragment_Enzyme_Type_Length_Start_Stop"
   
-##   tmp.length <- t(sapply(strsplit(df[, FRAG_COL], "///"),
-##   function(y) sapply(y, function(z)
-##   suppressWarnings(as.integer(strsplit(z, "//")[[1]][1])))))
-##   colnames(tmp.length) <- NULL
-
-  ## Affy is not being consistent on the way they are
-  ## annotating
-  getFragLengthsCNV <- function(v)
-    sapply(strsplit(v, " /// "), function(y) paste(sapply(strsplit(y, " // "), "[[", 1), collapse=";"))
-  
-##  df[[FRAG_COL]] <- getFragLength(df[ , FRAG_COL])
-
   df <- getPAR(df)
   df[["Strand"]] <- as.integer(ifelse(df[["Strand"]] == "+", SENSE, ANTISENSE))
-  df[["frag"]] <- getFragLengthsCNV(df[[FRAG_COL]])
+  df[[FRAG_COL]] <- as.character(df[[FRAG_COL]])
+  tmp.length <- getFragLength.na29(df[[FRAG_COL]])
+  df[["frag1"]] <- tmp.length[,1]
+  df[["frag2"]] <- tmp.length[,2]
+
   df[["Copy_Number_Variation"]] <- as.character(df[["Copy_Number_Variation"]])
+
   
   db_cols <- c("chrom", "chrom_start", "chrom_stop", "strand",
-               "cytoband", "gene_assoc", "xpar", "fragment_length", "cnv")
+               "cytoband", "gene_assoc", "xpar", "fragment_length",
+               "fragment_length2", "cnv")
   
-  val_holders <- c(":Chromosome", ":Chromosome_Start", ":Chromosome_Stop",
-                   ":Strand", ":Cytoband", ":Associated_Gene",
-                   ":XPAR", ":frag", ":Copy_Number_Variation")
+  val_holders <- c(":Chromosome", ":Chromosome_Start",
+                   ":Chromosome_Stop", ":Strand", ":Cytoband",
+                   ":Associated_Gene", ":XPAR", ":frag1", ":frag2",
+                   ":Copy_Number_Variation")
   
   exprs <- paste(db_cols, " = ", val_holders, sep="", collapse=", ")
   sql <- paste("update featureSetCNV set ", exprs,
@@ -469,17 +499,13 @@ snp6.loadAffyCsv.cnv <- function(db, csvFile, batch_size=5000) {
     names(df) <- header
     df[["Associated_Gene"]] <- as.character(df[["Associated_Gene"]])
 
-##     tmp.length <- t(sapply(strsplit(df[, FRAG_COL], "///"),
-##     function(y) sapply(y, function(z)
-##     suppressWarnings(as.integer(strsplit(z, "//")[[1]][1])))))
-##     
-##     colnames(tmp.length) <- NULL
-  
-##  df[[FRAG_COL]] <- getFragLength(df[ , FRAG_COL])
-
     df <- getPAR(df)
     df[["Strand"]] <- as.integer(ifelse(df[["Strand"]] == "+", SENSE, ANTISENSE))
-    df[["frag"]] <- getFragLengthsCNV(df[[FRAG_COL]])
+    df[[FRAG_COL]] <- as.character(df[[FRAG_COL]])
+    tmp.length <- getFragLength.na29(df[[FRAG_COL]])
+    df[["frag1"]] <- tmp.length[,1]
+    df[["frag2"]] <- tmp.length[,2]
+
     df[["Copy_Number_Variation"]] <- as.character(df[["Copy_Number_Variation"]])
 
     dbBeginTransaction(db)
